--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                  <h1>Our Core Features</h1>
                  <p>Powerful features and inclusions, which makes Porto standout, <br> easily customizable and scalable.</p>
             </div>
-            <div class="card-con reveal">
+            <div class="card-con ">
         <!-- CARD 1 -->
         <div class="card">
             <svg class="icon" viewBox="0 0 24 24">
